[package]
name = "esa-cli-rs"
version = "0.1.0"
edition = "2021"
authors = ["Didy"]
description = "esa-cli is the command-line tool for esa.io."
repository = "https://github.com/didy-ss/esa-cli-rs"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.12", features = ["derive"] }
mime_guess = "2.0.4"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
toml = "0.5.9"

[[bin]]
name = "esa-cli"
path = "src/main.rs"
